2008-12-22 18:36-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/ProjectCenter.gorm: Minor changes.
	* Framework/PCEditorManager.m: Cleanup.
	* Framework/PCProjectLauncher.m: Cleanup.
	* GNUmakefile: New module.
	* Headers/Protocols/CodeDebugger.h: New methods
	* Modules/Debuggers/ProjectCenter/GNUmakefile: Added debugger
	to resources.
	* Modules/Debuggers/ProjectCenter/PCDebugger.h
	* Modules/Debuggers/ProjectCenter/PCDebugger.m: Changes to talk to
	debugger task
	* Modules/Debuggers/ProjectCenter/Resources/PCDebugger.gorm: Debugger
	gorm file.

2008-12-23  Sergii Stoian <stoyan255@gmail.com>

	* Documentatio/TODO: move unfinshed tasks from 0.5 to 0.6 release
	
2008-12-21  Sergii Stoian <stoyan255@gmail.com>

	* Documentatio/TODO: update tasks for 0.6 release
	
2008-12-19  Nicola Pero <nicola.pero@meta-innovation.com>

	* All GNUmakefiles: removed GNUSTEP_CORE_SOFTWARE=YES and
	added PACKAGE_NAME=ProjectCenter.
	* GNUmakefile: Export PACKAGE_NAME to reduce chances of a problem
	if a GNUmakefile in a subdirectory is missing it.
	
2008-12-18  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Framework/GNUmakefile.preamble (GMAKE): Take advantage of the
	MAKE variable, which must already be set to the correct make else
	we wouldn't be able to compile PC itself, when searching for a
	working make.  (GMAKE, GDB): Use := to void spawning a subshell
	every time one of these variables is read.

2008-12-18  Nicola Pero  <nicola.pero@meta-innovation.com>

	* All GNUmakefiles: added GNUSTEP_CORE_SOFTWARE=YES at the
	beginning.
	* GNUmakefile: Export GNUSTEP_CORE_SOFTWARE to reduce chances of a
	problem if a GNUmakefile in a subdirectory is missing it.
	
2008-12-17 Richard frith-Macdonald <rfm"gnu.org>

	Where files are to be entered using NSOpenPanel and a 'set' button,
	make the corresponding textfields which display the filename selectable
	but not editable.

2008-12-17 Richard frith-Macdonald <rfm"gnu.org>
